--- a/css/customize/content-list-style-free.css
+++ b/css/customize/content-list-style-free.css
@@ -1,1 +1,1 @@
-:is(:root,:root.minimal) .content-list-style-free{--content-list-item-background: none}:is(:root,:root.minimal) .content-list-style-free :is(.chapter-group__list-item,.story__blog-list-item){border-radius:0;border-bottom:none}
+:is(:root,:root.minimal) .content-list-style-free{--content-li-background: none;--card-content-li-background: none}:is(:root,:root.minimal) .content-list-style-free :is(.chapter-group__list-item,.story__blog-list-item){border-radius:0;border-bottom:none}
