--- a/src/scss/_minimal.scss
+++ b/src/scss/_minimal.scss
@@ -6,7 +6,10 @@
     --container-drop-shadow: none;
     --figure-drop-shadow: none;
     --paragraph-tools-filter: none;
-    --content-list-item-background: var(--content-list-item-background-full);
+    --content-li-background: var(--content-li-background-full);
+    --story-blog-li-background: var(--content-li-background-full);
+    --chapter-li-background: var(--content-li-background-full);
+    --card-content-li-background: var(--card-content-li-background-full);
     --embed-box-shadow: var(--minimal-container-box-shadow);
   }
 
