--- a/src/scss/customize/content-list-style-full.scss
+++ b/src/scss/customize/content-list-style-full.scss
@@ -3,7 +3,7 @@
 
 :root:not(.minimal) .content-list-style-full {
   --card-content-li-background: var(--card-content-li-background-full);
-  --content-list-item-background: var(--content-list-item-background-full);
+  --content-li-background: var(--content-li-background-full);
 
   .chapter-group__list-item {
     padding: .5rem 8px .5rem 6px;
