--- a/src/scss/customize/content-list-style-lines.scss
+++ b/src/scss/customize/content-list-style-lines.scss
@@ -2,7 +2,8 @@
 @import '../common/_mixins';
 
 :is(:root, :root.minimal) .content-list-style-lines {
-  --content-list-item-background: none;
+  --content-li-background: none;
+  --card-content-li-background: none;
 
   :is(.chapter-group__list-item, .story__blog-list-item, .card__link-list-item) {
     border-radius: 0;
