Simplify print.css

--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -42,19 +42,17 @@
   .main-navigation,
   .navigation,
   .header-background,
+  .chapter-note-hideable,
   .chapter__actions,
   .chapter__suggestion,
-  .chapter__foreword,
-  .chapter__afterword,
-  .chapter__warning,
   .chapter__comments,
+  .chapter__support,
   .wp-block-embed,
   .wp-block-video,
   .wp-block-audio,
   .wp-block-file-wrapper,
   .micro-menu,
   .paragraph-tools,
-  .chapter__support,
   .lightbox {
     display: none !important;
     content-visibility: hidden;
