--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -204,6 +204,7 @@ body {
       cursor: pointer;
       user-select: none;
       -webkit-appearance: none;
+      appearance: none;
       display: flex;
       gap: 0 6px;
       flex-shrink: 0;
