--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -79,7 +79,7 @@
 
   &__wrapper {
     height: calc(100% - 6px); // Offset margin
-    background: var(--e-body);
+    background: var(--placeholder-background);
     margin-top: 6px;
     overflow: hidden;
     transform: translateZ(0); // Safari fix
