--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -35,18 +35,18 @@
   .close {
     --focus-offset: -2px;
     position: absolute;
-    top: 5px;
-    right: 4px;
+    top: 0;
+    right: 0;
     display: block;
-    color: var(--fg-900);
+    color: var(--fg-950);
     font-size: 20px;
     line-height: 1;
-    padding: 4px 8px;
+    padding: 9px 12px 8px 16px;
     text-shadow: none;
     transition: color var(--transition-duration);
 
     &:hover {
-      color: var(--modal-icon-hover);
+      color: var(--fg-300);
     }
   }
 
@@ -91,7 +91,6 @@
     }
 
     > hr {
-      border-bottom: 1.5px solid var(--secant);
       margin: 0 12px;
     }
   }
@@ -109,7 +108,7 @@
   &__horizontal-input-group {
     > :is(i, .icon) {
       flex-shrink: 0;
-      color: var(--modal-icon);
+      color: var(--fg-600);
       text-align: center;
       min-width: 26px;
     }
