--- a/src/scss/customize/card-style-unfolded-combined.scss
+++ b/src/scss/customize/card-style-unfolded-combined.scss
@@ -22,11 +22,11 @@
 
       .card__footer-box {
         background: none;
-        border-top: var(--card-style-secant-width, 1.5px) solid var(--secant);
+        border-top: var(--card-style-border-width, 1.5px) solid var(--card-style-border-color, var(--bg-900));
         border-radius: 0;
 
         &._right {
-          border-left: var(--card-style-secant-width, 1.5px) solid var(--secant);
+          border-left: var(--card-style-border-width, 1.5px) solid var(--card-style-border-color, var(--bg-900));
           min-width: 9cqw;
         }
       }
